--- a/julienmrl/package.json
+++ b/julienmrl/package.json
@@ -2,6 +2,7 @@
   "name": "julienmrl",
   "version": "0.1.0",
   "private": true,
+  "prettier": "@imjustlucas/prettier-config",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -21,5 +22,12 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@imjustlucas/prettier-config": "^1.0.2",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.6"
   }
 }
